syntax = "proto3"; //if you don’t do this the protocol buffer compiler will assume you are using proto2

package transfering; //Package name isn't required, but useful to create somelike a namespace

// The Transfer service definition.
service Transfer {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);    //Only request argument is a stream, it's a Client Stream request

  rpc DownloadFile (DownloadFileRequest) returns (stream DownloadFileResponse);	//Only response argument is a stream, it's a Server Stream request

}

message UploadFileRequest {
  FileMetadata metadata = 1; //Field numbers are required identificators for Protobuf messages
  bytes data = 2;
}

message DownloadFileRequest {
	string file_name = 1;
}

//You can define your own types to be used as the field types. This way you can create a complex message structures
message FileMetadata { 
  string file_name = 1;
}

message UploadFileResponse {
  string id = 1;
}

message DownloadFileResponse {
	FileMetadata metadata = 1;
	bytes data = 2;
}
